--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-native-easy-grid": "^0.1.8",
     "react-native-elements": "^0.9.5",
     "react-native-firestack": "^2.3.9",
+    "react-native-google-places-autocomplete": "^1.2.7",
     "react-native-loading-spinner-overlay": "latest",
     "react-native-looped-carousel": "^0.1.5",
     "react-native-mobx": "^0.3.1",
@@ -33,7 +34,8 @@
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-preset-react-native-stage-0": "^1.0.1",
     "jest": "18.1.0",
-    "react-test-renderer": "~15.4.0-rc.4"
+    "react-test-renderer": "~15.4.0-rc.4",
+    "reactotron-react-native": "^1.7.0"
   },
   "jest": {
     "preset": "react-native"
