--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -84,7 +84,7 @@ def enableProguardInReleaseBuilds = false
 
 android {
     compileSdkVersion 23
-    buildToolsVersion "23.0.1"
+    buildToolsVersion '25.0.2'
 
     defaultConfig {
         applicationId "com.hookup.android"
@@ -127,10 +127,10 @@ android {
 
 dependencies {
     compile project(':react-native-firestack')
+    compile fileTree(include: ['*.jar'], dir: 'libs')
+    compile 'com.facebook.react:react-native:+' // From node_modules
     compile project(':react-native-vector-icons')
-    compile fileTree(dir: "libs", include: ["*.jar"])
-    compile "com.android.support:appcompat-v7:23.0.1"
-    compile "com.facebook.react:react-native:+"  // From node_modules
+    compile 'com.android.support:appcompat-v7:23.0.1'
 }
 
 // Run this once to be able to run the application with BUCK
