--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "firebase": "^3.6.7",
     "mobx": "^3.0.2",
     "mobx-react": "^4.1.0",
+    "moment": "^2.17.1",
     "react": "~15.4.0-rc.4",
     "react-native": "0.40.0",
     "react-native-datepicker": "^1.4.4",
