--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -90,6 +90,7 @@ android {
         applicationId "com.hookup.android"
         minSdkVersion 16
         targetSdkVersion 22
+        multiDexEnabled true
         versionCode 1
         versionName "1.0"
         ndk {
@@ -123,11 +124,19 @@ android {
             }
         }
     }
+
+    dexOptions {
+        javaMaxHeapSize "4g"
+    }
 }
 
 dependencies {
+    compile project(':react-native-firestack')
     compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.facebook.react:react-native:+' // From node_modules
+    compile('com.google.android.gms:play-services:10.2.0'){
+      force = true
+    }
     compile project(':react-native-vector-icons')
     compile 'com.android.support:appcompat-v7:23.0.1'
 }
