--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -131,6 +131,7 @@ android {
 }
 
 dependencies {
+    compile project(':react-native-image-picker')
     compile project(':react-native-firestack')
     compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.facebook.react:react-native:+' // From node_modules
