--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-native-elements": "^0.9.5",
     "react-native-firestack": "^2.3.9",
     "react-native-google-places-autocomplete": "^1.2.7",
+    "react-native-image-picker": "latest",
     "react-native-looped-carousel": "^0.1.5",
     "react-native-mobx": "^0.3.1",
     "react-native-router-flux": "^3.37.0",
