--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-native-mobx": "^0.3.1",
     "react-native-router-flux": "^3.37.0",
     "react-native-swipe-carousel": "^0.1.7",
+    "react-native-user-avatar": "^1.0.2",
     "react-native-vector-icons": "^4.0.0"
   },
   "devDependencies": {
