--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "~15.4.0-rc.4",
     "react-native": "0.40.0",
     "react-native-datepicker": "^1.4.4",
+    "react-native-drawer": "^2.3.0",
     "react-native-easy-grid": "^0.1.8",
     "react-native-elements": "^0.9.5",
     "react-native-firestack": "^2.3.9",
