--- a/ios/hookup/Info.plist
+++ b/ios/hookup/Info.plist
@@ -2,6 +2,12 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
   <dict>
+    <key>NSPhotoLibraryUsageDescription</key>
+    <string>是否同意此App存取相簿?</string>
+    <key>NSCameraUsageDescription</key>
+    <string>是否同意此App使用相機功能?</string>
+    <key>NSMicrophoneUsageDescription</key>
+    <string>是否同意此App使用相機錄音功能?</string>
     <key>CFBundleDevelopmentRegion</key>
     <string>en</string>
     <key>CFBundleExecutable</key>
