--- a/package.json
+++ b/package.json
@@ -20,9 +20,10 @@
     "react-native-drawer": "^2.3.0",
     "react-native-easy-grid": "^0.1.8",
     "react-native-elements": "^0.9.5",
+    "react-native-fetch-blob": "^0.10.2",
     "react-native-firestack": "^2.3.9",
     "react-native-google-places-autocomplete": "^1.2.7",
-    "react-native-image-picker": "latest",
+    "react-native-image-picker": "^0.25.7",
     "react-native-looped-carousel": "^0.1.5",
     "react-native-mobx": "^0.3.1",
     "react-native-router-flux": "^3.37.0",
