--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -131,6 +131,7 @@ android {
 }
 
 dependencies {
+    compile project(':react-native-image-resizer')
     compile project(':react-native-fetch-blob')
     compile project(':react-native-image-picker')
     compile fileTree(include: ['*.jar'], dir: 'libs')
