--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-native-fetch-blob": "^0.10.2",
     "react-native-google-places-autocomplete": "^1.2.7",
     "react-native-image-picker": "^0.25.7",
+    "react-native-image-resizer": "^0.1.0",
     "react-native-looped-carousel": "^0.1.5",
     "react-native-mobx": "^0.3.1",
     "react-native-router-flux": "^3.37.0",
