--- a/.eslintrc
+++ b/.eslintrc
@@ -3,15 +3,23 @@
     "env": {
         "browser": true
     },
-    "plugins": [
-        "react"
-    ],
     "extends": [
-        "eslint:recommended",
-        "plugin:react/recommended"
+        "react-native",
     ],
     "rules": {
       "no-console": "off",
+      "prop-types": "off",
+      "react/jsx-handler-names": "off",
+      "react/no-did-mount-set-state": "off",
+      "arrow-body-style": "off",
+      "no-invalid-this": "off",
+      "prefer-spread": "off",
+      "react/jsx-no-bind": "off",
+      "react-native/no-inline-styles": "off",
+      "eqeqeq": "off",
+      "class-methods-use-this": "off",
+      "react-native/no-color-literals": "off",
+      "no-empty-function": "off"
     },
     "globals": {
         "require": true
