--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-native-image-resizer": "^0.1.0",
     "react-native-looped-carousel": "^0.1.5",
     "react-native-mobx": "^0.3.1",
+    "react-native-photo-grid": "^0.0.2",
     "react-native-router-flux": "^3.37.0",
     "react-native-swipe-carousel": "^0.1.7",
     "react-native-user-avatar": "^1.0.2",
@@ -35,6 +36,7 @@
     "babel-jest": "18.0.0",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-preset-react-native-stage-0": "^1.0.1",
+    "eslint-config-react-native": "^1.6.0",
     "jest": "18.1.0",
     "react-test-renderer": "~15.4.0-rc.4",
     "reactotron-react-native": "^1.7.0"
