--- a/package.json
+++ b/package.json
@@ -7,9 +7,6 @@
     "test": "jest"
   },
   "dependencies": {
-    "babel-eslint": "^7.1.1",
-    "eslint": "^3.14.0",
-    "eslint-plugin-react": "^6.9.0",
     "firebase": "^3.6.7",
     "mobx": "^3.0.2",
     "mobx-react": "^4.1.0",
@@ -29,14 +26,17 @@
     "react-native-mobx": "^0.3.1",
     "react-native-photo-grid": "^0.0.2",
     "react-native-router-flux": "^3.37.0",
+    "react-native-storage": "^0.1.5",
     "react-native-swipe-carousel": "^0.1.7",
     "react-native-user-avatar": "^1.0.2",
     "react-native-vector-icons": "^4.0.0"
   },
   "devDependencies": {
+    "babel-eslint": "^7.1.1",
     "babel-jest": "18.0.0",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-preset-react-native-stage-0": "^1.0.1",
+    "eslint": "^3.14.0",
     "eslint-config-react-native": "^1.6.0",
     "eslint-plugin-react": "^6.10.0",
     "jest": "18.1.0",
