--- a/src/views/package.json
+++ b/src/views/package.json
@@ -25,8 +25,10 @@
     "react-native-looped-carousel": "^0.1.5",
     "react-native-message-bar": "^1.6.0",
     "react-native-mobx": "^0.3.1",
+    "react-native-pathjs-charts": "^0.0.26",
     "react-native-photo-grid": "^0.0.2",
     "react-native-router-flux": "^3.37.0",
+    "react-native-scrollable-tab-view": "^0.7.3",
     "react-native-storage": "^0.1.5",
     "react-native-swipe-carousel": "^0.1.7",
     "react-native-user-avatar": "^1.0.2",
