--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "moment": "^2.17.1",
     "react": "~15.4.0-rc.4",
     "react-native": "0.40.0",
+    "react-native-actionsheet": "^2.0.6",
     "react-native-customized-image-picker": "^0.0.24",
     "react-native-datepicker": "^1.4.4",
     "react-native-drawer": "^2.3.0",
@@ -23,6 +24,7 @@
     "react-native-image-picker": "^0.25.7",
     "react-native-image-resizer": "^0.1.0",
     "react-native-looped-carousel": "^0.1.5",
+    "react-native-message-bar": "^1.6.0",
     "react-native-mobx": "^0.3.1",
     "react-native-photo-grid": "^0.0.2",
     "react-native-router-flux": "^3.37.0",
