--- a/package.json
+++ b/package.json
@@ -24,6 +24,10 @@
     "react-native-image-resizer": "^0.1.0",
     "react-native-looped-carousel": "^0.1.5",
     "react-native-mobx": "^0.3.1",
+    "react-native-pathjs-charts": "^0.0.26",
+    "react-native-photo-grid": "^0.0.2",
+    "react-native-router-flux": "^3.37.0",
+    "react-native-scrollable-tab-view": "^0.7.3",
     "react-native-photo-grid": "^0.0.2",
     "react-native-router-flux": "^3.37.0",
     "react-native-storage": "^0.1.5",
