--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "jest"
   },
   "dependencies": {
-    "firebase": "^3.6.7",
+    "firebase": "^3.7.3",
+    "geofire": "^4.1.2",
     "mobx": "^3.0.2",
     "mobx-react": "^4.1.0",
     "moment": "^2.17.1",
