--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -131,6 +131,7 @@ android {
 }
 
 dependencies {
+    compile project(':react-native-device-info')
     compile project(':react-native-svg')
     compile project(':react-native-customized-image-picker')
     compile project(':react-native-image-resizer')
