--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-native-auto-expanding-textinput": "0.0.5",
     "react-native-customized-image-picker": "^0.0.24",
     "react-native-datepicker": "^1.4.4",
+    "react-native-device-info": "^0.10.2",
     "react-native-drawer": "^2.3.0",
     "react-native-easy-grid": "^0.1.8",
     "react-native-elements": "^0.10.2",
