--- a/package.json
+++ b/package.json
@@ -47,8 +47,7 @@
     "eslint-config-react-native": "^1.6.0",
     "eslint-plugin-react": "^6.10.0",
     "jest": "18.1.0",
-    "react-test-renderer": "~15.4.0-rc.4",
-    "reactotron-react-native": "^1.7.0"
+    "react-test-renderer": "~15.4.0-rc.4"
   },
   "jest": {
     "preset": "react-native"
