--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -139,7 +139,7 @@ dependencies {
     compile project(':react-native-image-picker')
     compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.facebook.react:react-native:+' // From node_modules
-    compile('com.google.android.gms:play-services:10.2.0'){
+    compile('com.google.android.gms:play-services:+'){
       force = true
     }
     compile project(':react-native-vector-icons')
