fixed geolocation timeout problem

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -139,9 +139,11 @@ dependencies {
     compile project(':react-native-image-picker')
     compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.facebook.react:react-native:+' // From node_modules
-    compile('com.google.android.gms:play-services:+'){
+    compile('com.google.android.gms:play-services:10.2.1'){
       force = true
     }
+    compile 'com.google.firebase:firebase-core:10.2.1';
+    compile 'com.firebase:geofire-android:2.1.1'
     compile project(':react-native-vector-icons')
     compile 'com.android.support:appcompat-v7:23.0.1'
 }
@@ -152,3 +154,5 @@ task copyDownloadableDepsToLibs(type: Copy) {
     from configurations.compile
     into 'libs'
 }
+
+apply plugin: 'com.google.gms.google-services'
