--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
     "react-native-easy-grid": "^0.1.8",
     "react-native-elements": "^0.10.2",
     "react-native-fetch-blob": "^0.10.2",
+    "react-native-gifted-chat": "^0.1.4",
     "react-native-google-places-autocomplete": "^1.2.7",
     "react-native-image-picker": "^0.25.7",
     "react-native-image-resizer": "^0.1.0",
+    "react-native-lightbox": "^0.6.0",
     "react-native-looped-carousel": "^0.1.5",
     "react-native-message-bar": "^1.6.0",
     "react-native-mobx": "^0.3.1",
@@ -47,8 +49,7 @@
     "eslint-config-react-native": "^1.6.0",
     "eslint-plugin-react": "^6.10.0",
     "jest": "18.1.0",
-    "react-test-renderer": "~15.4.0-rc.4",
-    "reactotron-react-native": "^1.7.0"
+    "react-test-renderer": "~15.4.0-rc.4"
   },
   "jest": {
     "preset": "react-native"
