--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -164,4 +164,4 @@ task copyDownloadableDepsToLibs(type: Copy) {
     into 'libs'
 }
 
-apply plugin: 'com.google.gms.google-services'
+//apply plugin: 'com.google.gms.google-services'
