--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-native-simple-modal": "^5.0.0",
     "react-native-storage": "^0.1.5",
     "react-native-swipe-carousel": "^0.1.7",
+    "react-native-user-avatar": "^1.0.2",
     "react-native-vector-icons": "^4.0.0"
   },
   "devDependencies": {
