--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-native-datepicker": "^1.4.4",
     "react-native-device-info": "^0.10.2",
     "react-native-drawer": "^2.3.0",
+    "react-native-dropdown-menu": "^1.1.0",
     "react-native-easy-grid": "^0.1.8",
     "react-native-elements": "^0.10.2",
     "react-native-fetch-blob": "^0.10.2",
@@ -31,11 +32,13 @@
     "react-native-looped-carousel": "^0.1.5",
     "react-native-message-bar": "^1.6.0",
     "react-native-mobx": "^0.3.1",
+    "react-native-modal": "^2.3.2",
     "react-native-pathjs-charts": "^0.0.26",
     "react-native-photo-grid": "^0.0.2",
     "react-native-router-flux": "^3.37.0",
     "react-native-scrollable-tab-view": "^0.7.3",
     "react-native-simple-modal": "^5.0.0",
+    "react-native-smooth-swipe-list": "^1.1.15",
     "react-native-storage": "^0.1.5",
     "react-native-swipe-carousel": "^0.1.7",
     "react-native-user-avatar": "^1.0.2",
