--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "firebase": "^3.7.3",
     "geofire": "^4.1.2",
+    "lodash": "^4.17.4",
     "mobx": "^3.0.2",
     "mobx-react": "^4.1.0",
     "moment": "^2.17.1",
