--- a/package.json
+++ b/package.json
@@ -7,40 +7,41 @@
     "test": "jest"
   },
   "dependencies": {
-   "firebase": "^3.7.3",
-   "geofire": "^4.1.2",
-   "mobx": "^3.0.2",
-   "mobx-react": "^4.1.0",
-   "moment": "^2.17.1",
-   "react": "~15.4.0-rc.4",
-   "react-native": "0.40.0",
-   "react-native-actionsheet": "^2.0.6",
-   "react-native-auto-expanding-textinput": "0.0.5",
-   "react-native-customized-image-picker": "^0.0.24",
-   "react-native-datepicker": "^1.4.4",
-   "react-native-device-info": "^0.10.2",
-   "react-native-drawer": "^2.3.0",
-   "react-native-easy-grid": "^0.1.8",
-   "react-native-elements": "^0.11.2",
-   "react-native-fetch-blob": "^0.10.2",
-   "react-native-gifted-chat": "^0.1.4",
-   "react-native-google-places-autocomplete": "^1.2.7",
-   "react-native-image-picker": "^0.25.7",
-   "react-native-image-resizer": "^0.1.0",
-   "react-native-lightbox": "^0.6.0",
-   "react-native-looped-carousel": "^0.1.5",
-   "react-native-message-bar": "^1.6.0",
-   "react-native-mobx": "^0.3.1",
-   "react-native-pathjs-charts": "^0.0.26",
-   "react-native-photo-grid": "^0.0.2",
-   "react-native-router-flux": "^3.37.0",
-   "react-native-scrollable-tab-view": "^0.7.3",
-   "react-native-simple-modal": "^5.0.0",
-   "react-native-storage": "^0.1.5",
-   "react-native-swipe-carousel": "^0.1.7",
-   "react-native-user-avatar": "^1.0.2",
-   "react-native-vector-icons": "^4.1.1"
- },
+    "firebase": "^3.7.3",
+    "geofire": "^4.1.2",
+    "mobx": "^3.0.2",
+    "mobx-react": "^4.1.0",
+    "moment": "^2.17.1",
+    "react": "~15.4.0-rc.4",
+    "react-native": "0.40.0",
+    "react-native-actionsheet": "^2.0.6",
+    "react-native-auto-expanding-textinput": "0.0.5",
+    "react-native-customized-image-picker": "^0.0.24",
+    "react-native-datepicker": "^1.4.4",
+    "react-native-device-info": "^0.10.2",
+    "react-native-drawer": "^2.3.0",
+    "react-native-easy-grid": "^0.1.8",
+    "react-native-elements": "^0.11.2",
+    "react-native-fetch-blob": "^0.10.2",
+    "react-native-gifted-chat": "^0.1.4",
+    "react-native-google-places-autocomplete": "^1.2.7",
+    "react-native-image-picker": "^0.25.7",
+    "react-native-image-resizer": "^0.1.0",
+    "react-native-lightbox": "^0.6.0",
+    "react-native-looped-carousel": "^0.1.5",
+    "react-native-message-bar": "^1.6.0",
+    "react-native-mobx": "^0.3.1",
+    "react-native-modal": "^2.4.0",
+    "react-native-pathjs-charts": "^0.0.26",
+    "react-native-photo-grid": "^0.0.2",
+    "react-native-router-flux": "^3.37.0",
+    "react-native-scrollable-tab-view": "^0.7.3",
+    "react-native-simple-modal": "^5.0.0",
+    "react-native-storage": "^0.1.5",
+    "react-native-swipe-carousel": "^0.1.7",
+    "react-native-user-avatar": "^1.0.2",
+    "react-native-vector-icons": "^4.1.1"
+  },
   "devDependencies": {
     "babel-eslint": "^7.1.1",
     "babel-jest": "18.0.0",
