--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "geolib": "^2.0.21",
     "firebase": "^3.7.3",
     "geofire": "^4.1.2",
     "lodash": "^4.17.4",
