--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "autobind-decorator": "^1.4.1",
     "geolib": "^2.0.21",
     "firebase": "^3.7.3",
     "geofire": "^4.1.2",
