--- a/android/build.gradle
+++ b/android/build.gradle
@@ -22,4 +22,17 @@ allprojects {
             url "$rootDir/../node_modules/react-native/android"
         }
     }
+
+    configurations.all {
+        resolutionStrategy {
+            eachDependency { DependencyResolveDetails details ->
+                if (details.requested.group == 'com.facebook.react' && details.requested.name == 'react-native') {
+                    def file = new File("$rootDir/../node_modules/react-native/package.json")
+                    def version = new groovy.json.JsonSlurper().parseText(file.text).version
+                    details.useVersion version
+                }
+            }
+        }
+    }
 }
+
