--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@ptomasroos/react-native-multi-slider": "0.0.8",
     "firebase": "3.x.x",
     "geofire": "^4.1.2",
     "geolib": "^2.0.21",
@@ -16,6 +17,7 @@
     "react": "~15.4.1",
     "react-native": "0.42.3",
     "react-native-actionsheet": "^2.0.6",
+    "react-native-customized-image-picker": "^0.0.28",
     "react-native-datepicker": "^1.4.4",
     "react-native-device-info": "^0.10.2",
     "react-native-drawer": "^2.3.0",
@@ -25,7 +27,6 @@
     "react-native-fetch-blob": "^0.10.2",
     "react-native-gifted-chat": "^0.1.4",
     "react-native-google-places-autocomplete": "^1.2.7",
-    "react-native-customized-image-picker": "^0.0.28",
     "react-native-image-picker": "^0.25.7",
     "react-native-image-resizer": "^0.1.1",
     "react-native-lightbox": "^0.6.0",
