--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -140,6 +140,7 @@ android {
 }
 
 dependencies {
+    compile project(':react-native-billing')
     compile project(':react-native-device-info')
     compile project(':react-native-svg')
     compile project(':react-native-customized-image-picker')
