--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "start": "node node_modules/react-native/local-cli/cli.js start",
-    "test": "jest"
+    "test": "jest",
+    "storybook": "storybook start -p 7007"
   },
   "dependencies": {
     "@ptomasroos/react-native-multi-slider": "0.0.8",
@@ -36,6 +37,7 @@
     "react-native-mobx": "^0.3.1",
     "react-native-modal": "^2.4.0",
     "react-native-pathjs-charts": "^0.0.26",
+    "react-native-photo-browser": "^0.3.1",
     "react-native-photo-grid": "^0.0.2",
     "react-native-router-flux": "3.38.0",
     "react-native-scrollable-tab-view": "^0.7.3",
@@ -47,6 +49,7 @@
     "react-native-vector-icons": "~4.1.1"
   },
   "devDependencies": {
+    "@storybook/react-native": "^3.1.5",
     "babel-eslint": "^7.1.1",
     "babel-jest": "18.0.0",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
@@ -55,6 +58,7 @@
     "eslint-config-react-native": "^1.6.0",
     "eslint-plugin-react": "^6.10.0",
     "jest": "18.1.0",
+    "react-dom": "^15.5.4",
     "react-test-renderer": "~15.4.0-rc.4"
   },
   "jest": {
