--- a/package.json
+++ b/package.json
@@ -48,7 +48,8 @@
     "react-native-storage": "^0.2.1",
     "react-native-swipe-carousel": "^0.1.7",
     "react-native-user-avatar": "^1.0.2",
-    "react-native-vector-icons": "~4.1.1"
+    "react-native-vector-icons": "~4.1.1",
+    "react-navigation": "^1.0.0-beta.11"
   },
   "devDependencies": {
     "@storybook/react-native": "^3.1.5",
