--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -140,6 +140,8 @@ android {
 }
 
 dependencies {
+    compile project(':react-native-photo-view')
+    compile project(':react-native-image-crop-picker')
     compile project(':react-native-billing')
     compile project(':react-native-device-info')
     compile project(':react-native-svg')
