--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-native-image-carousel": "^0.4.1",
     "react-native-image-picker": "^0.25.7",
     "react-native-image-resizer": "^0.1.1",
+    "react-native-linear-gradient": "^2.1.0",
     "react-native-message-bar": "^1.6.0",
     "react-native-mobx": "^0.3.1",
     "react-native-modal": "^2.4.0",
