--- a/ios/Podfile
+++ b/ios/Podfile
@@ -13,21 +13,23 @@ target 'Bacon' do
   
   pod 'Yoga', path: '../node_modules/react-native/ReactCommon/yoga'
   pod 'React', path: '../node_modules/react-native', subspecs: [
+    'BatchedBridge', # Required For React Native 0.45.0+
+    'Core',
     'ART',
   ]
   pod 'BVLinearGradient', :path => '../node_modules/react-native-linear-gradient'
 
-  # Required by RNFirebase
+  # Core is always required
   pod 'Firebase/Core'
-  pod 'RNFirebase', :path => '../node_modules/react-native-firebase'
 
-  # [OPTIONAL PODS] - comment out pods for firebase products you won't be using.
+  # Optional modules
   pod 'Firebase/Auth'
   pod 'Firebase/Database'
   pod 'Firebase/RemoteConfig'
   pod 'Firebase/Storage'
 
-  
+  pod 'RNFirebase', :path => '../node_modules/react-native-firebase'
+
   target 'Bacon-tvOSTests' do
     inherit! :search_paths
     # Pods for testing
