--- a/ios/Podfile
+++ b/ios/Podfile
@@ -18,7 +18,8 @@ target 'Bacon' do
     'ART',
   ]
   pod 'BVLinearGradient', :path => '../node_modules/react-native-linear-gradient'
-
+  pod 'RNVectorIcons', :path => '../node_modules/react-native-vector-icons'
+  
   # Core is always required
   pod 'Firebase/Core'
 
