--- a/ios/Bacon/GoogleService-Info.plist
+++ b/ios/Bacon/GoogleService-Info.plist
@@ -17,7 +17,7 @@
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>com.kayming.hkup</string>
+	<string>com.kayming.ios.bacon</string>
 	<key>PROJECT_ID</key>
 	<string>kjyl-150415</string>
 	<key>STORAGE_BUCKET</key>
