--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node node_modules/react-native/local-cli/cli.js start",
+    "reset": "sh ./reset.sh",
     "test": "jest"
   },
   "rnpm": {
@@ -28,7 +29,7 @@
     "react-native-image-resizer": "^0.1.1",
     "react-native-linear-gradient": "^2.1.0",
     "react-native-mobx": "^0.3.1",
-    "react-native-router-flux": "~3.39.1",
+    "react-native-router-flux": "~3.41.0",
     "react-native-scrollable-tab-view": "^0.6.7",
     "react-native-vector-icons": "^4.2.0"
   },
