--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -92,7 +92,16 @@ def enableProguardInReleaseBuilds = false
 android {
     compileSdkVersion 25
     buildToolsVersion "25.0.2"
-
+    signingConfigs { 
+        release {
+            if (project.hasProperty('MYAPP_RELEASE_STORE_FILE')) {
+                storeFile file(MYAPP_RELEASE_STORE_FILE) 
+                storePassword MYAPP_RELEASE_STORE_PASSWORD 
+                keyAlias MYAPP_RELEASE_KEY_ALIAS 
+                keyPassword MYAPP_RELEASE_KEY_PASSWORD
+            }
+        } 
+    }
     defaultConfig {
         applicationId "com.kayming.android.bacon"
         minSdkVersion 16
@@ -115,6 +124,7 @@ android {
         release {
             minifyEnabled enableProguardInReleaseBuilds
             proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
+            signingConfig signingConfigs.release
         }
     }
     // applicationVariants are e.g. debug, release
