--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "geolib": "^2.0.22",
     "mobx": "^3.2.1",
     "mobx-react": "^4.2.2",
+    "native-base": "^2.3.0",
     "prop-types": "^15.5.10",
     "react": "16.0.0-alpha.12",
     "react-native": "0.46.4",
@@ -28,9 +29,12 @@
     "react-native-image-picker": "^0.26.3",
     "react-native-image-resizer": "^0.1.1",
     "react-native-linear-gradient": "^2.1.0",
+    "react-native-looped-carousel": "^0.1.7",
     "react-native-mobx": "^0.3.1",
+    "react-native-photo-view": "^1.3.0",
     "react-native-router-flux": "~3.41.0",
     "react-native-scrollable-tab-view": "^0.6.7",
+    "react-native-swipe-cards": "git://github.com/meteor-factory/react-native-tinder-swipe-cards.git#81189ef",
     "react-native-vector-icons": "^4.2.0"
   },
   "devDependencies": {
