--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "react-native-image-picker": "^0.26.3",
     "react-native-image-resizer": "^0.1.1",
     "react-native-linear-gradient": "^2.1.0",
-    "react-native-looped-carousel": "^0.1.7",
+    "react-native-looped-carousel": "git://github.com/appintheair/react-native-looped-carousel.git#e30b041",
     "react-native-mobx": "^0.3.1",
     "react-native-photo-view": "^1.3.0",
     "react-native-router-flux": "~3.41.0",
