--- a/package.json
+++ b/package.json
@@ -37,12 +37,16 @@
     "react-native-vector-icons": "^4.2.0"
   },
   "devDependencies": {
-    "babel-eslint": "^7.2.2",
+    "babel-eslint": "^7.2.3",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-preset-react-native-stage-0": "^1.0.1",
-    "eslint": "^4.2.0",
+    "eslint": "^3.19.0",
+    "eslint-config-airbnb": "^15.0.1",
+    "eslint-loader": "^1.8.0",
+    "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-jsx-a11y": "^5.0.1",
     "eslint-plugin-react": "^7.1.0",
-    "eslint-plugin-react-native": "^3.0.1"
+    "eslint-plugin-babel": "^4.1.2"
   },
   "jest": {
     "preset": "react-native"
