--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -143,6 +143,8 @@ android {
 }
 
 dependencies {
+    compile project(':react-native-image-to-base64')
+    compile project(':react-native-fetch-blob')
     compile project(':react-native-billing')
     compile project(':react-native-linear-gradient')
     compile project(':react-native-image-resizer')
