--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     ]
   },
   "dependencies": {
+    "lodash": "^4.17.4",
     "mobx": "^3.2.1",
     "mobx-react": "^4.2.2",
     "prop-types": "^15.5.10",
