--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     ]
   },
   "dependencies": {
+    "firebase": "^4.1.3",
+    "geofire": "^4.1.2",
     "lodash": "^4.17.4",
     "mobx": "^3.2.1",
     "mobx-react": "^4.2.2",
