--- a/ios/Bacon/GoogleService-Info.plist
+++ b/ios/Bacon/GoogleService-Info.plist
@@ -7,21 +7,21 @@
 	<key>AD_UNIT_ID_FOR_INTERSTITIAL_TEST</key>
 	<string>ca-app-pub-3940256099942544/4411468910</string>
 	<key>CLIENT_ID</key>
-	<string>725652377518-qu3tgsn6jl6stdb615s8iia4k47nj43o.apps.googleusercontent.com</string>
+	<string>853409872698-oibc9lkaifadh910kt8gtetdt507lk50.apps.googleusercontent.com</string>
 	<key>REVERSED_CLIENT_ID</key>
-	<string>com.googleusercontent.apps.725652377518-qu3tgsn6jl6stdb615s8iia4k47nj43o</string>
+	<string>com.googleusercontent.apps.853409872698-oibc9lkaifadh910kt8gtetdt507lk50</string>
 	<key>API_KEY</key>
-	<string>AIzaSyBm9fcnGrmdAZo26_PJH5ieA0paXpLpYHY</string>
+	<string>AIzaSyB1JH2IootIlCp6gOeu4sHqrj7WgMR4nPg</string>
 	<key>GCM_SENDER_ID</key>
-	<string>725652377518</string>
+	<string>853409872698</string>
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>com.kayming.ios.bacon</string>
+	<string>com.kaying.ios.bacon</string>
 	<key>PROJECT_ID</key>
-	<string>kjyl-150415</string>
+	<string>bacon-dev-tsao</string>
 	<key>STORAGE_BUCKET</key>
-	<string>kjyl-150415.appspot.com</string>
+	<string>bacon-dev-tsao.appspot.com</string>
 	<key>IS_ADS_ENABLED</key>
 	<true/>
 	<key>IS_ANALYTICS_ENABLED</key>
@@ -33,8 +33,8 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true/>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:725652377518:ios:bbdec425ca56934d</string>
+	<string>1:853409872698:ios:02fc2cec34ec543e</string>
 	<key>DATABASE_URL</key>
-	<string>https://kjyl-150415.firebaseio.com</string>
+	<string>https://bacon-dev-tsao.firebaseio.com</string>
 </dict>
 </plist>
