--- a/ios/Bacon/Info.plist
+++ b/ios/Bacon/Info.plist
@@ -61,6 +61,16 @@
 		<string>NotoSansUI-BoldItalic.ttf</string>
 		<string>NotoSansUI-Italic.ttf</string>
 		<string>NotoSansUI-Regular.ttf</string>
+		<string>Entypo.ttf</string>
+		<string>EvilIcons.ttf</string>
+		<string>FontAwesome.ttf</string>
+		<string>Foundation.ttf</string>
+		<string>Ionicons.ttf</string>
+		<string>MaterialCommunityIcons.ttf</string>
+		<string>MaterialIcons.ttf</string>
+		<string>Octicons.ttf</string>
+		<string>SimpleLineIcons.ttf</string>
+		<string>Zocial.ttf</string>
 	</array>
 </dict>
 </plist>
