--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@ptomasroos/react-native-multi-slider": "0.0.8",
     "geofire": "^4.1.2",
+    "lodash": "^4.17.4",
     "mobx": "^3.2.1",
     "mobx-react": "^4.2.2",
     "prop-types": "^15.5.10",
