--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "prop-types": "^15.5.10",
     "react": "16.0.0-alpha.12",
     "react-native": "0.46.4",
+    "react-native-animatable": "^1.2.3",
     "react-native-billing": "^2.3.0",
     "react-native-datepicker": "^1.6.0",
     "react-native-drawer": "^2.3.0",
