--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "react-native-image-resizer": "^0.1.1",
     "react-native-in-app-utils": "^5.5.0",
     "react-native-linear-gradient": "^2.1.0",
-    "react-native-looped-carousel": "appintheair/react-native-looped-carousel#e30b041",
+    "react-native-looped-carousel": "kaymingmobile/react-native-looped-carousel#master",
     "react-native-mobx": "^0.3.1",
     "react-native-router-flux": "~3.41.0",
     "react-native-scrollable-tab-view": "^0.6.7",
