--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "react-native-datepicker": "^1.6.0",
     "react-native-drawer": "^2.3.0",
     "react-native-elements": "^0.15.0",
-    "react-native-fast-image": "~0.1.2",
+    "react-native-fast-image": "0.0.11",
     "react-native-firebase": "^2.0.4",
     "react-native-google-places": "^2.4.1",
     "react-native-image-pan-zoom": "^2.0.5",
