--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -143,6 +143,7 @@ android {
 }
 
 dependencies {
+    compile project(':react-native-svg')
     compile project(':react-native-google-places')
     compile ('com.google.android.gms:play-services-base:11.0.4') {
       force = true
