--- a/package.json
+++ b/package.json
@@ -36,8 +36,10 @@
     "react-native-linear-gradient": "^2.1.0",
     "react-native-looped-carousel": "kaymingmobile/react-native-looped-carousel#master",
     "react-native-mobx": "^0.3.1",
+    "react-native-pathjs-charts": "^0.0.30",
     "react-native-router-flux": "~3.41.0",
     "react-native-scrollable-tab-view": "^0.6.7",
+    "react-native-svg": "^5.4.1",
     "react-native-vector-icons": "^4.3.0"
   },
   "devDependencies": {
