--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -107,8 +107,8 @@ android {
         applicationId "com.kayming.android.bacon"
         minSdkVersion 16
         targetSdkVersion 22
-        versionCode 5
-        versionName "Alpha-1.0.5"
+        versionCode 6
+        versionName "Alpha-1.0.6"
         ndk {
             abiFilters "armeabi-v7a", "x86"
         }
@@ -144,6 +144,7 @@ android {
 }
 
 dependencies {
+    compile project(':react-native-exit-app')
     compile project(':react-native-svg')
     compile project(':react-native-google-places')
     compile ('com.google.android.gms:play-services-base:11.0.4') {
