--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-native-dropdown-menu": "git+https://github.com/kaymingmobile/react-native-dropdown-menu.git",
     "react-native-elements": "^0.15.0",
     "react-native-exit-app": "kaymingmobile/react-native-exit-app#master",
+    "react-native-extended-stylesheet": "^0.6.0",
     "react-native-fast-image": "1.0.0",
     "react-native-firebase": "^2.0.4",
     "react-native-fs": "^2.5.1",
