--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -108,7 +108,7 @@ android {
         minSdkVersion 16
         targetSdkVersion 22
         versionCode 22
-        versionName "Alpha-2.2.0"
+        versionName "Beta-1.0.0"
         ndk {
             abiFilters "armeabi-v7a", "x86"
         }
