--- a/package.json
+++ b/package.json
@@ -14,31 +14,31 @@
     ]
   },
   "dependencies": {
-    "@ptomasroos/react-native-multi-slider": "0.0.8",
+    "@ptomasroos/react-native-multi-slider": "0.0.11",
     "crypto-js": "^3.1.9-1",
     "geofire": "^4.1.2",
     "geolib": "^2.0.23",
     "iap-receipt-validator": "^1.0.6",
     "lodash": "^4.17.4",
     "mkp-react-native-image-view": "kaymingmobile/react-native-image-view#master",
-    "mobx": "^3.2.2",
-    "mobx-react": "^4.2.2",
+    "mobx": "^3.3.1",
+    "mobx-react": "^4.3.3",
     "moment": "^2.18.1",
     "prop-types": "^15.5.10",
-    "react": "16.0.0-alpha.12",
-    "react-native": "^0.48.4",
+    "react": "16.0.0",
+    "react-native": "0.49.3",
     "react-native-animatable": "^1.2.3",
     "react-native-billing": "^2.3.1",
     "react-native-datepicker": "^1.6.0",
-    "react-native-drawer": "2.3.0",
-    "react-native-dropdown-menu": "kaymingmobile/react-native-dropdown-menu#bacon",
-    "react-native-elements": "^0.15.0",
+    "react-native-drawer": "2.5.0",
+    "react-native-dropdown-menu": "tsaohucn/react-native-dropdown-menu#bacon",
+    "react-native-elements": "^0.17.0",
     "react-native-exit-app": "kaymingmobile/react-native-exit-app#master",
     "react-native-extended-stylesheet": "^0.6.0",
     "react-native-fast-image": "^1.0.0",
     "react-native-firebase": "^2.0.4",
     "react-native-fs": "^2.5.1",
-    "react-native-gifted-chat": "^0.2.5",
+    "react-native-gifted-chat": "^0.3.0",
     "react-native-google-places": "kaymingmobile/react-native-google-places#patch-1",
     "react-native-image-pan-zoom": "^2.0.5",
     "react-native-image-picker": "kaymingmobile/react-native-image-picker#patch-1",
@@ -51,8 +51,8 @@
     "react-native-modal": "^2.4.0",
     "react-native-orientation-locker": "^1.0.3",
     "react-native-pathjs-charts": "^0.0.30",
-    "react-native-router-flux": "~3.41.0",
-    "react-native-scrollable-tab-view": "^0.6.7",
+    "react-native-router-flux": "kaymingmobile/react-native-router-flux#master",
+    "react-native-scrollable-tab-view": "^0.8.0",
     "react-native-star-rating": "^1.0.8",
     "react-native-storage": "^0.2.2",
     "react-native-svg": "^5.4.1",
