--- a/package.json
+++ b/package.json
@@ -17,12 +17,12 @@
     "geofire": "4.1.2",
     "geolib": "2.0.24",
     "iap-receipt-validator": "^1.0.6",
-    "mobx": "3.3.2",
+    "mobx": "3.4.1",
     "mobx-react": "4.3.5",
-    "moment": "2.19.3",
+    "moment": "2.19.4",
     "prop-types": "15.6.0",
-    "react": "16.0.0-alpha.12",
-    "react-native": "0.48.4",
+    "react": "16.2.0",
+    "react-native": "0.49.3",
     "react-native-animatable": "1.2.4",
     "react-native-bacon-circle-image": "kaymingmobile/react-native-bacon-circle-image#master",
     "react-native-bacon-square-image": "kaymingmobile/react-native-bacon-square-image#master",
@@ -30,16 +30,16 @@
     "react-native-billing": "2.4.0",
     "react-native-datepicker": "1.6.0",
     "react-native-deck-swiper": "kaymingmobile/react-native-deck-swiper#master",
-    "react-native-drawer": "2.3.0",
+    "react-native-drawer": "2.5.0",
     "react-native-dropdown-menu": "tsaohucn/react-native-dropdown-menu#bacon",
-    "react-native-elements": "0.17.0",
+    "react-native-elements": "0.18.5",
     "react-native-exit-app": "1.0.0",
     "react-native-fast-image": "2.0.1",
     "react-native-firebase": "3.1.1",
-    "react-native-fs": "2.8.5",
+    "react-native-fs": "2.9.2",
     "react-native-gifted-chat": "tsaohucn/react-native-gifted-chat#master",
     "react-native-google-places": "2.4.2",
-    "react-native-image-pan-zoom": "2.0.8",
+    "react-native-image-pan-zoom": "2.0.9",
     "react-native-image-picker": "0.26.7",
     "react-native-image-resizer": "1.0.0",
     "react-native-in-app-utils": "6.0.0",
